--- a/app/src/main/res/layout/paint_layout.xml
+++ b/app/src/main/res/layout/paint_layout.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/id_exit_btn"
             android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
@@ -24,7 +24,7 @@
             android:layout_width="150dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="20dp"
             android:layout_toLeftOf="@id/id_undo_btn"
             app:bgColor="#FFE0B2"
             app:leftColor="#8cc152"
@@ -37,15 +37,6 @@
             app:textRightClickColor="#FFE0B2"
             app:textRightColor="#8cc152"
             app:time="500" />
-
-        <ImageView
-            android:id="@+id/id_save_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:background="@mipmap/mz_titlebar_ic_more_dark"></ImageView>
 
         <ImageView
             android:id="@+id/id_redo_btn"
@@ -61,9 +52,19 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="20dp"
             android:layout_toLeftOf="@id/id_redo_btn"
             android:background="@mipmap/ic_undo" />
+
+        <ImageView
+            android:id="@+id/id_save_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:background="@mipmap/mz_titlebar_ic_more_dark" />
+
     </RelativeLayout>
 
     <!--body-->
@@ -199,7 +200,6 @@
         </LinearLayout>
 
         <LinearLayout
-
             android:id="@+id/save_menu_layout"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
@@ -209,12 +209,21 @@
             android:visibility="gone">
 
             <TextView
+                android:id="@+id/stop_playback"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:gravity="right"
+                android:text="@string/stop_playback"
+                android:textSize="25sp" />
+
+            <TextView
                 android:id="@+id/cur_paint_clear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:gravity="right"
-                android:text="@string/save_cur_paint_board"
+                android:text="@string/clear_cur_paint_board"
                 android:textSize="25sp" />
 
             <TextView
